--- a/index.html
+++ b/index.html
@@ -264,13 +264,13 @@
                                     </a>                                        
                                 </li>
                                 <li>
-                                    <a href="images/courses/((httpsskills.yourlearning.ibm.comcertificateshare0b2ce63febewogICJvYmplY3RJZCIgOiAiUExBTi04NzQ5QzAyQTc4RUMiLAogICJsZWFybmVyQ05VTSIgOiAiMTg1ODYyOFJFRyIsCiAgIm9iamVjdFR5cGUiIDogIkFDVElWSVRZIgp9231e431f56-10)).png">
+                                    <a href="courses/((httpsskills.yourlearning.ibm.comcertificateshare0b2ce63febewogICJvYmplY3RJZCIgOiAiUExBTi04NzQ5QzAyQTc4RUMiLAogICJsZWFybmVyQ05VTSIgOiAiMTg1ODYyOFJFRyIsCiAgIm9iamVjdFR5cGUiIDogIkFDVElWSVRZIgp9231e431f56-10)).png">
                                         IBM SkillsBuild (Web Development Fundamentals)
                                         <span>2023/9/27</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="images/courses/certificate.pdf">
+                                    <a href="courses/certificate.pdf">
                                         HP LIFE (Effective websites)
                                         <span>2023/6/9</span>
                                     </a>
