--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 <div class="column entry">
                     <a href="images/folio/gallery/g-Bondi.jpg" class="entry__link glightbox" data-glightbox="title: Bondi ; description: .entry__desc-02">
                         <div class="entry__thumb">
-                            <img src="images/folio/bondi.png" srcset="images/folio/bondi.png 1x, images/folio/bondi@2x.png 2x" alt="">
+                            <img src="images/folio/bondi.png" srcset="images/folio/bondi.png 1x, images/folio/bondi@2.png 2x" alt="">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">Bondi 
